selfhost/test/typechecker/indexing/array_error_range_nullable.2.out
Error at %FILE_NAME%:3:7
Type mismatch
  |  arr[1:a]
           ^
Expected: Int
but instead found: Int?
