selfhost/test/typechecker/indexing/array_error_range_nullable.2.abra
val arr = [1, 2, 3]
val a: Int? = 1
arr[1:a]